kind_ingress/service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ingress
spec:
  selector:
    app: nginx
    env: ready
  type: LoadBalancer
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 80
