kind_ingress/ingress_object.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-object
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-ingress
            port:
              # match with port service
              number: 3000

# connect ports service - ingress
# kubectl port-forward service/service-ingress 3000:3000
# localhost:3000
